--- a/fotomatic_broken/resources/css/style.css
+++ b/fotomatic_broken/resources/css/style.css
@@ -41,6 +41,7 @@ header {
   width: 100%;
   border-bottom: solid 1px #c6c1c1;
   background-color: white;
+  color: #4a4a4a;
 }
 
 header .content {
@@ -59,6 +60,7 @@ header nav ul {
 
 nav li {
   padding-left: 3.5rem;
+  font-size: 1rem;
 }
 
 nav a {
