Add box-sizing property to html and remove extra whitespace in header styling

--- a/fotomatic_broken/resources/css/style.css
+++ b/fotomatic_broken/resources/css/style.css
@@ -3,6 +3,7 @@
 html {
   font-family: "Roboto", sans-serif;
   font-size: 16px;
+  box-sizing: border-box;
 }
 
 .main-content {
@@ -42,7 +43,7 @@ header {
   border-bottom: solid 1px #c6c1c1;
   background-color: white;
   color: #4a4a4a;
-  
+
 }
 
 header .content {
