Update button margin in sign-up CTA section

--- a/fotomatic_broken/resources/css/style.css
+++ b/fotomatic_broken/resources/css/style.css
@@ -161,7 +161,7 @@ header .mobile {
 }
 
 #sign-up-cta .button {
-  margin-top: 1.625rem;
+  margin: 1.625rem 5rem 3rem 5rem;
   padding: 1.25rem 7.25rem;
 }
 
