--- a/fotomatic_broken/resources/css/style.css
+++ b/fotomatic_broken/resources/css/style.css
@@ -128,6 +128,8 @@ header .mobile {
   border: solid 1px #979797;
   border-radius: 4px;
   background-color: #9dc20b;
+  margin-top: 10.625rem;
+  margin-left: 6.25rem;
 }
 
 #sign-up-cta .content {
@@ -161,8 +163,9 @@ header .mobile {
 }
 
 #sign-up-cta .button {
-  
-  margin: 1.625rem 5rem 3rem 5rem;
+  width: 408px;
+  h
+  margin: 1.625rem 5rem 3.5rem 5rem;
   padding: 1.25rem 7.25rem;
 }
 
