Update sign-up button dimensions using rem units for width and height

--- a/fotomatic_broken/resources/css/style.css
+++ b/fotomatic_broken/resources/css/style.css
@@ -163,8 +163,8 @@ header .mobile {
 }
 
 #sign-up-cta .button {
-  width: 408px;
-  h
+  width: 25.5rem;
+  height: 4rem;
   margin: 1.625rem 5rem 3.5rem 5rem;
   padding: 1.25rem 7.25rem;
 }
