--- a/fotomatic_broken/resources/css/style.css
+++ b/fotomatic_broken/resources/css/style.css
@@ -121,6 +121,9 @@ header .mobile {
   justify-content: flex-start;
   align-items: flex-start;
   height: 43.5rem;
+  background-image: url("../images/banner-landingpage.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 #sign-up-cta {
@@ -128,8 +131,7 @@ header .mobile {
   border: solid 1px #979797;
   border-radius: 4px;
   background-color: #9dc20b;
-  margin-top: 10.625rem;
-  margin-left: 6.25rem;
+  margin: 10.625rem 6.25rem;
 }
 
 #sign-up-cta .content {
@@ -159,7 +161,9 @@ header .mobile {
 
 #sign-up-cta .striking {
   font-family: "Rubik", sans-serif;
+  font-size: 3.125rem;
   padding-bottom: .75rem;
+  line-height: 1.4;
 }
 
 #sign-up-cta .button {
