--- a/fotomatic_broken/resources/css/style.css
+++ b/fotomatic_broken/resources/css/style.css
@@ -166,6 +166,12 @@ header .mobile {
   line-height: 1.4;
 }
 
+#sign-up-cta .email {
+  font-size: 1.25rem;
+  line-height: 1.4;
+  padding-bottom: 1.625rem;
+}
+
 #sign-up-cta .button {
   width: 25.5rem;
   height: 4rem;
