--- a/fotomatic_broken/resources/css/style.css
+++ b/fotomatic_broken/resources/css/style.css
@@ -127,7 +127,8 @@ header .mobile {
 }
 
 #sign-up-cta {
-  padding: 0 5rem 2.5rem 5rem;
+  padding: 1.625rem 5rem 3.5rem 5rem;
+  /* padding: 0 5rem 2.5rem 5rem; */
   border: solid 1px #979797;
   border-radius: 4px;
   background-color: #9dc20b;
@@ -175,7 +176,6 @@ header .mobile {
 #sign-up-cta .button {
   width: 25.5rem;
   height: 4rem;
-  margin: 1.625rem 5rem 3.5rem 5rem;
   padding: 1.25rem 7.25rem;
 }
 
