--- a/fotomatic_broken/resources/css/style.css
+++ b/fotomatic_broken/resources/css/style.css
@@ -127,7 +127,7 @@ header .mobile {
 }
 
 #sign-up-cta {
-  padding: 1.625rem 5rem 3.5rem 5rem;
+  padding: 2rem 5rem 3.5rem 5rem;
   /* padding: 0 5rem 2.5rem 5rem; */
   border: solid 1px #979797;
   border-radius: 4px;
@@ -170,13 +170,13 @@ header .mobile {
 #sign-up-cta .email {
   font-size: 1.25rem;
   line-height: 1.4;
-  padding-bottom: 1.625rem;
+  margin-bottom: 1.625rem;
 }
 
 #sign-up-cta .button {
   width: 25.5rem;
   height: 4rem;
-  padding: 1.25rem 7.25rem;
+  /* padding: 1.25rem 7.25rem; */
 }
 
 @media only screen and (max-width: 760px) {
