--- a/fotomatic_broken/resources/css/style.css
+++ b/fotomatic_broken/resources/css/style.css
@@ -170,13 +170,12 @@ header .mobile {
 #sign-up-cta .email span {
   font-size: 1.25rem;
   line-height: 1.4;
-  margin-bottom: 1.625rem;
 }
 
 #sign-up-cta .button {
   width: 25.5rem;
   height: 4rem;
-  margin-bottom: 1.625rem;
+  margin-top: 1.625rem;
   /* padding: 1.25rem 7.25rem; */
 }
 
