--- a/fotomatic_broken/resources/css/style.css
+++ b/fotomatic_broken/resources/css/style.css
@@ -240,6 +240,7 @@ header .mobile {
   padding: 2rem;
   margin: 0px 1.25rem;
   background-color: white;
+  width: 100%;
 }
 
 .feature .image-container {
