--- a/fotomatic_broken/resources/css/style.css
+++ b/fotomatic_broken/resources/css/style.css
@@ -249,6 +249,10 @@ header .mobile {
   margin: 0 auto;
 }
 
+.image-container img {
+  object-fit: contain;
+}
+
 .feature h2 {
   padding-bottom: .5rem;
   font-size: 2.25rem;
