Update CSS to adjust image dimensions and add spacing in the logo section

--- a/fotomatic_broken/resources/css/style.css
+++ b/fotomatic_broken/resources/css/style.css
@@ -54,6 +54,7 @@ header .content {
 
 header .logo {
   flex: 1;
+  
 }
 
 header nav ul {
@@ -250,7 +251,8 @@ header .mobile {
 }
 
 .image-container img {
-  object-fit: fill;
+  width: 100%;
+  height: auto;
 }
 
 .feature h2 {
