--- a/fotomatic_broken/resources/css/style.css
+++ b/fotomatic_broken/resources/css/style.css
@@ -166,15 +166,16 @@ header .mobile {
 #sign-up-cta .email span {
   font-size: 1.25rem;
   line-height: 1.4;
+  margin-top: 1.625rem;
 }
 
 #sign-up-cta .button {
   width: 25.5rem;
   height: 4rem;
-  margin-top: 1.625rem;
   border-radius: 4px;
   background-color: #4a4a4a;
   color: white;
+  margin: auto 0;
 }
 
 @media only screen and (max-width: 760px) {
