--- a/fotomatic_broken/resources/css/style.css
+++ b/fotomatic_broken/resources/css/style.css
@@ -166,7 +166,8 @@ header .mobile {
 #sign-up-cta .email span {
   font-size: 1.25rem;
   line-height: 1.4;
-  margin-top: 1.625rem;
+  display: block;
+  margin-bottom: 1.625rem;
 }
 
 #sign-up-cta .button {
