Fix mobile header margin by changing it to center vertically and horizontally

--- a/fotomatic_broken/resources/css/style.css
+++ b/fotomatic_broken/resources/css/style.css
@@ -176,7 +176,7 @@ header .mobile {
   border-radius: 4px;
   background-color: #4a4a4a;
   color: white;
-  margin: auto 0;
+  margin: auto;
 }
 
 @media only screen and (max-width: 760px) {
