--- a/fotomatic_broken/resources/css/style.css
+++ b/fotomatic_broken/resources/css/style.css
@@ -176,7 +176,9 @@ header .mobile {
   border-radius: 4px;
   background-color: #4a4a4a;
   color: white;
-  margin: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 @media only screen and (max-width: 760px) {
