--- a/fotomatic_broken/resources/css/style.css
+++ b/fotomatic_broken/resources/css/style.css
@@ -243,6 +243,7 @@ header .mobile {
   margin: 0px 1.25rem;
   background-color: white;
   width: 50%;
+  height: 39.6875rem;
 }
 
 .feature .image-container {
