--- a/fotomatic_broken/resources/css/style.css
+++ b/fotomatic_broken/resources/css/style.css
@@ -37,7 +37,7 @@ header {
   border-bottom: solid 1px #c6c1c1;
   background-color: white;
   color: #4a4a4a;
-
+  z-index: 1;
 }
 
 header .content {
