Add top margin to feature section headings for improved spacing

--- a/fotomatic_broken/resources/css/style.css
+++ b/fotomatic_broken/resources/css/style.css
@@ -256,8 +256,10 @@ header .mobile {
 }
 
 .feature h2 {
+  margin-top: 2.5rem;
   padding-bottom: .5rem;
   font-size: 2.25rem;
+  
   font-weight: bold;
   color: #4a4a4a;
 }
