--- a/fotomatic_broken/resources/css/style.css
+++ b/fotomatic_broken/resources/css/style.css
@@ -259,7 +259,7 @@ header .mobile {
   margin-top: 2.5rem;
   padding-bottom: .5rem;
   font-size: 2.25rem;
-
+  line-height: 1.2;
   font-weight: bold;
   color: #4a4a4a;
 }
