--- a/fotomatic_broken/resources/css/style.css
+++ b/fotomatic_broken/resources/css/style.css
@@ -271,7 +271,7 @@ header .mobile {
   color: #4a4a4a;
 }
 
-@media only screen and (max-width: 890px) {
+@media only screen and (max-width: 760px) {
   .feature h2 {
     font-size: 1.125rem;
     line-height: 1.3;
@@ -284,13 +284,14 @@ header .mobile {
   }
 }
 
-@media only screen and (max-width: 760px) {
+@media only screen and (max-width: 450px) {
   #features-section {
     flex-flow: column;
     padding: 0;
   }
 
   .feature {
+    width: 100%;
     margin: 0;
     padding: 1.25rem 1rem 0 1rem;
   }
