Add width property to header mobile styling

--- a/fotomatic_broken/resources/css/style.css
+++ b/fotomatic_broken/resources/css/style.css
@@ -186,6 +186,7 @@ header .mobile {
     align-items: center;
     justify-content: center;
     height: 28rem;
+    width: 100%;
   }
 
   #sign-up-cta {
