--- a/fotomatic_broken/resources/css/style.css
+++ b/fotomatic_broken/resources/css/style.css
@@ -381,6 +381,7 @@ header .mobile {
 
 @media only screen and (max-width: 760px) {
   #quotes-section content {
+    display: flex;
     padding: 1.875rem .625rem;
   }
 
